# rust

./: .gitignore  README.md
hello_rs/: Cargo.toml
hello_rs/src/: main.rs
r00_env_setup/: Cargo.toml  README.md
r00_env_setup/src/: main.rs
r01_basics/: Cargo.toml  README.md
r01_basics/src/: control_stmnts.rs  function_demo.rs  main.rs  misc.rs
r02_complex/: README.md
r02_complex/src/: enum_demo.rs  main.rs  some_or_none_demo.rs  string_demo.rs  struct_demo.rs  tuple_struct_demo.rs
r02_compound_data/: Cargo.toml  README.md
r02_compound_data/src/: enum_demo.rs  main  main.rs  struct_demo.rs
r03_advanced/: Cargo.toml  README.md
r03_advanced/src/: closure_demo.rs  hof_demo.rs  main.rs  ownership_borrowing_demo.rs  traits_demo.rs
r04_create_lib/: Cargo.toml
r04_create_lib/src/: lib.rs  liblib.rlib
r04_create_lib/tests/: lib.rs
r04_create_lib_test/: Cargo.toml  README.md
r04_create_lib_test/src/: func_lib.rs  libfunc_lib.rlib  main.rs
r04_create_lib_test/tests/: lib.rs
